fix txt-overflow so it shows '...' at the end of 2 lines

--- a/src/scss/_structure.scss
+++ b/src/scss/_structure.scss
@@ -105,8 +105,11 @@ button[disabled] {
 }
 
 .txt-overflow {
-  overflow: hidden;
   text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .shadow-sm {
